# azure-data-platform-data-engineering

./: .gitignore  .pypirc-dist  CHANGELOG.md  DBT.md  Makefile  PREPROCESS.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg
azure_data_factory/: SFTP basic example.json  api.py  api_parameter.json  base.py  create_pipelines.py  functions.py  read_json.py  sftp.py  sftp_config.json  testsftp-random_data_1.json
ingenii_data_engineering/: dbt_schema.py  pre_process.py
