[metadata]
name = ingenii_data_engineering
url = TBA
author = Greg Atkins
author_email = greg@ingenii.dev
description = Facilitate data engineering using a combination of Databricks, dbt, and Azure Data Factory
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: Restricted
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include =
    ingenii_data_engineering

[options.package_data]